tests/suite/errors/e18_bitwise_on_float.rs
// err: bitwise op on non-integer

fn main() {
    let x: f32 = 1.5;
    let y: f32 = x & 3.0;
}
